fix slider arrows and change gallery height on mobile

--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -45,6 +45,11 @@
     z-index: 5;
     top: 50%;
     transform: translateY(-50%);
+    &.swiper-button-disabled {
+      opacity: 0.3;
+      cursor: auto;
+      pointer-events: none;
+    }
     @media (any-hover: hover) {
       &:hover svg {
         fill: #ffc2a6;
